--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
                     const ret = Module.ccall("setCubemap", 'string', ['number', 'number'], [cubemapTemp, binaryFile.byteLength]);
                     Module._free(cubemapTemp);
 
-                    console.log(ret);
-
                     return JSON.parse(ret);
                 }
                 
@@ -80,8 +78,8 @@
 
                 document.getElementById("screenshot").onclick = () => {
 
-                    const SCREENSHOT_WIDTH = 1024;
-                    const SCREENSHOT_HEIGHT = 1024;
+                    const SCREENSHOT_WIDTH = 1920 * 2;
+                    const SCREENSHOT_HEIGHT = 1080 * 2;
                     const dummyCanvas = document.createElement('canvas');
                     dummyCanvas.width = SCREENSHOT_WIDTH;
                     dummyCanvas.height = SCREENSHOT_HEIGHT;
