--- a/index.html
+++ b/index.html
@@ -19,20 +19,8 @@
            
 
             async function fetchArrayBuffer(fileLoc) {
-<<<<<<< HEAD
                 
-                // const result = await Promise.any([
-                //     fetch(`${fileLoc}`),
-                //     fetch(`https://virtualtour.ddns.net/${fileLoc}`)
-                // ]);
-
-                const result = await fetch(`https://virtualtour.ddns.net/${fileLoc}`);
-=======
-                const result = await Promise.race([
-                    fetch(`${fileLoc}`),
-                    fetch(`https://virtualtour.ddns.net/${fileLoc}`)
-                ]);
->>>>>>> parent of 5d06938 (Update index.html)
+                const result = fetch(`${fileLoc}`);
 
                 return result.arrayBuffer();
             }
