--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
             async function fetchArrayBuffer(fileLoc) {
                 
-                const result = fetch(`${fileLoc}`);
-
+                const result = await fetch(`${fileLoc}`);
                 return result.arrayBuffer();
             }
 
